ci: add docker support

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,6 @@
 ECOMMERCE_DATABASE_SETTINGS__CONNECTIONSTRING=URL_TO_MONGO
 ECOMMERCE_DATABASE_SETTINGS__DATABASE=DATABASE_NAME
+LOGGING__LOGLEVEL__MICROSOFT.ASPNETCORE.HTTPLOGGING.HTTPLOGGING.HTTPLOGGINGMIDDLEWARE=Information
 LOGGING__LOGLEVEL__DEFAULT=Information
 LOGGING__LOGLEVEL__MICROSOFT.ASPNETCORE=Warning
+ASPNETCORE_ENVIRONMENT=Development
