--- a/src/Modules/Users/Modules.Users.Endpoints/Modules.Users.Endpoints.csproj
+++ b/src/Modules/Users/Modules.Users.Endpoints/Modules.Users.Endpoints.csproj
@@ -5,6 +5,7 @@
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
