ci: add tests for ecommerce-web-app
-Fixes #24

--- a/src/ecommerce-web-app/package.json
+++ b/src/ecommerce-web-app/package.json
@@ -34,5 +34,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!**/jest.config.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/jest.config.js"
+    ]
   }
 }
