--- a/.github/workflows/build-and-test-react.yml
+++ b/.github/workflows/build-and-test-react.yml
@@ -17,14 +17,16 @@ job:
   build-and-test-ecommerce-web-app:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      
     - name: Use Node.js ${{ env.NODE_VERSION }} 
       uses: actions/setup-node@v4
       with:
           node-version: ${{ env.NODE_VERSION }} 
+
       - name: npm ci, build and test
         run: |
           npm ci
           npm run build --if-present
           npm test      
-          
