--- a/.github/workflows/build-and-test-react.yml
+++ b/.github/workflows/build-and-test-react.yml
@@ -13,7 +13,7 @@ on:
 env:
   NODE_VERSION: '22.0.x' # Node version to use
 
-job:
+jobs:
   build-and-test-ecommerce-web-app:
     runs-on: ubuntu-latest
     steps:
