--- a/.github/workflows/build-and-test-react.yml
+++ b/.github/workflows/build-and-test-react.yml
@@ -4,29 +4,29 @@ on:
   push:
   pull_request:
     branches: [ main ]
-    paths: # Runs only when the files with these extensions has changed
-    - '**.js'
-    - '**.jsx'
-    - '**.ts'
-    - '**.tsx'
+    paths: # Runs only when the files with these extensions have changed
+      - '**.js'
+      - '**.jsx'
+      - '**.ts'
+      - '**.tsx'
 
 env:
-  NODE_VERSION: '22.0.x' # Node version to use
+  NODE_VERSION: '12.x' # Node version to use
 
 jobs:
   build-and-test-ecommerce-web-app:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ env.NODE_VERSION }} 
-      uses: actions/setup-node@v4
-      with:
+      - name: Use Node.js ${{ env.NODE_VERSION }} 
+        uses: actions/setup-node@v4
+        with:
           node-version: ${{ env.NODE_VERSION }} 
 
       - name: npm ci, build and test
         run: |
           npm ci
           npm run build --if-present
-          npm test      
+          npm test
