--- a/.github/workflows/build-and-test-dotnet.yml
+++ b/.github/workflows/build-and-test-dotnet.yml
@@ -2,11 +2,15 @@ name: Build and test ecommerce-backend
 
 on:
   push:
+    branches: [ main ]
+    paths: # Runs only when the files with these extensions has changed
+      - '**.cs'
+      - '**.csproj'
   pull_request:
     branches: [ main ]
     paths: # Runs only when the files with these extensions has changed
-    - '**.cs'
-    - '**.csproj'
+      - '**.cs'
+      - '**.csproj'
 
 env:
   DOTNET_VERSION: '8.0.x' # The .NET SDK version to use
@@ -17,7 +21,7 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      
+
     - name: Use .NET Core ${{ env.DOTNET_VERSION }}
       uses: actions/setup-dotnet@v3
       with:
