chore: changes for make repo lowercase
-Fixes #34

--- a/.github/workflows/build-backend-docker-image-staging.yml
+++ b/.github/workflows/build-backend-docker-image-staging.yml
@@ -6,10 +6,10 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository }}-service
 
 jobs:
-  build-and-push-image:
+  build-and-push-staging-image:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
