ci: run test workflow

--- a/.github/workflows/deploy-frontend-to-gh-pages.yml
+++ b/.github/workflows/deploy-frontend-to-gh-pages.yml
@@ -51,5 +51,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         if: github.ref == 'refs/heads/main'
         with:
+          full_commit_message: ${{ github.event.head_commit.message }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./build
